--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "15.5.8",
     "@types/webpack-env": "1.13.1",
     "@types/node": "^8.0.14",
+    "@types/faker": "4.1.4",
     "css-loader": "1.0.0",
     "express": "^4.16.4",
     "babel-loader": "~7.1.5",
