--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "typescript": "~2.9.2",
     "webpack": "~4.17.1",
     "webpack-cli": "~2.1.5",
-    "react-svg-loader": "2.1.0"
+    "react-svg-loader": "2.1.0",
+    "svg-inline-loader": "0.8.0"
   }
 }
