Small fixes & improvements

--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   },
   "dependencies": {
     "@uifabric/experiments": "5.45.1",
-    "mobx-react": "5.3.4",
-    "mobx-utils": "5.0.3",
-    "mobx": "5.5.1",
+    "mobx-react": "5.3.6",
+    "mobx-utils": "5.0.4",
+    "mobx": "5.5.2",
     "moment": "^2.22.2",
-    "office-ui-fabric-react": "^5.129.0",
+    "office-ui-fabric-react": "5.131.0",
     "papaparse": "4.6.1",
     "file-saver": "2.0.0-rc.4",
     "react": "15.6.2",
